# big_data_project

./: .gitignore  EDA.ipynb  README.md  prep_1_alg_1.ipynb  pyproject.toml
conclusions/: accuracies.csv  f1_scores_macro.csv  performance.csv  unique_values_counts.txt
performance_measurements/: EDA.ipynb  prep_1.py  prep_1_alg_1.ipynb  prep_1_alg_2.ipynb  prep_1_alg_3.ipynb  prep_1_alg_4.ipynb
performance_measurements/PCA/: CatBoost.ipynb  KNN.ipynb  LinearSVC.ipynb  NaiveBayes.ipynb  RandomForestClassifier.ipynb  preprocessing.py
performance_measurements/UMAP/: CatBoost.ipynb  preprocessing.py
performance_measurements/random_projection/: CatBoost.ipynb  preprocessing.py
performance_measurements/simple_encoding/: CatBoost.ipynb  KNN.ipynb  LinearSVC.ipynb  NaiveBayes.ipynb  RandomForestClassifier.ipynb  preprocessing.py
