[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["Eduard Stan <edigeorges50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
